# Embedded_Debug_Tool

./: README.md
firmware/: Debug_Tool.mex
firmware/Debug/: Debug_Tool.axf  Debug_Tool.map  Debug_Tool_Debug.ld  Debug_Tool_Debug_library.ld  Debug_Tool_Debug_memory.ld  makefile
firmware/Debug/board/: clock_config.d  clock_config.su  peripherals.d  peripherals.su  pin_mux.d  pin_mux.su  subdir.mk
firmware/Debug/device/: subdir.mk  system_MK02F12810.d  system_MK02F12810.su
firmware/Debug/drivers/: fsl_clock.d  fsl_clock.su  fsl_common.d  fsl_dmamux.d  fsl_dmamux.su  fsl_dspi.d  fsl_dspi.su  fsl_edma.su  fsl_ftfx_cache.su  fsl_ftfx_controller.d  fsl_ftfx_controller.su  fsl_ftfx_flash.su  fsl_ftfx_flexnvm.d  fsl_gpio.d  fsl_gpio.su  fsl_pit.d  fsl_pit.su  fsl_smc.su  fsl_uart.su  fsl_uart_edma.d  fsl_uart_edma.su  subdir.mk
firmware/Debug/source/: Debug_Tool.d  Debug_Tool.su  action.su  debug.d  debug.su  execute.su  subdir.mk  uart.su  uart_proto.su
firmware/Debug/startup/: startup_mk02f12810.d  startup_mk02f12810.su  subdir.mk
firmware/Debug/utilities/: fsl_assert.d  subdir.mk
firmware/Release/: Debug_Tool.axf  Debug_Tool.map  Debug_Tool_Release.ld  Debug_Tool_Release_library.ld  Debug_Tool_Release_memory.ld  makefile  sources.mk
firmware/Release/board/: board.d  clock_config.d  clock_config.su  peripherals.su  pin_mux.su  subdir.mk
firmware/Release/device/: subdir.mk  system_MK02F12810.su
firmware/Release/drivers/: fsl_clock.su  fsl_common_arm.d  fsl_dspi.su  fsl_edma.d  fsl_edma.su  fsl_ftfx_cache.d  fsl_ftfx_cache.su  fsl_ftfx_controller.su  fsl_ftfx_flash.d  fsl_ftfx_flash.su  fsl_gpio.su  fsl_pit.su  fsl_smc.d  fsl_smc.su  fsl_uart.d  fsl_uart.su  subdir.mk
firmware/Release/source/: Debug_Tool.d  Debug_Tool.su  debug.su  subdir.mk
firmware/Release/startup/: startup_mk02f12810.su  subdir.mk
firmware/Release/utilities/: subdir.mk
firmware/board/: board.c  board.h  clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
firmware/component/uart/: fsl_adapter_uart.c
firmware/device/: MK02F12810.h  MK02F12810_COMMON.h  MK02F12810_features.h  fsl_device_registers.h  system_MK02F12810.c  system_MK02F12810.h
firmware/device/periph/: PERI_ADC.h  PERI_CMP.h  PERI_CRC.h  PERI_DAC.h  PERI_DMA.h  PERI_DMAMUX.h  PERI_EWM.h  PERI_FMC.h  PERI_FTFA.h  PERI_FTM.h  PERI_GPIO.h  PERI_I2C.h  PERI_LLWU.h  PERI_LPTMR.h  PERI_MCG.h  PERI_MCM.h  PERI_NV.h  PERI_OSC.h  PERI_PDB.h  PERI_PIT.h  PERI_PMC.h  PERI_PORT.h  PERI_RCM.h  PERI_SIM.h  PERI_SMC.h  PERI_SPI.h  PERI_UART.h  PERI_VREF.h  PERI_WDOG.h
firmware/drivers/: fsl_clock.c  fsl_clock.h  fsl_dspi.c  fsl_dspi.h  fsl_uart.c  fsl_uart_edma.h
firmware/source/: Debug_Tool.c  Debug_Tool.h  debug.c  debug.h
firmware/source/action/: action.c  action.h
firmware/startup/: startup_mk02f12810.c
qt_app/: CMakeLists.txt  action.h  actionEncoder.h  actionset.cpp  actionset.h  actionwindow.cpp  actionwindow.h  actionwindow.ui  ci2cwindow.ui  cspiwindow.cpp  cspiwindow.h  cspiwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialmonitor.cpp  serialmonitor.h  serialmonitor.ui
qt_app/handlers/action/: add.cpp  cancel.cpp
qt_app/handlers/cspi/: clr.cpp  import.cpp  set.cpp  stop.cpp  terminate.cpp
qt_app/handlers/main/: addAction.cpp  cSPI.cpp  clearFlash.cpp  connect.cpp  deleteAction.cpp  editAction.cpp  execute.cpp  reset.cpp  serialMonitor.cpp  writeFlash.cpp
qt_app/utils/action/: csv.cpp  currentKind.cpp  fillFromAction.cpp  hL.cpp  level.cpp  makeAction.cpp  parseIds.cpp  parseTime.cpp  setEditMode.cpp  setKindPage.cpp
qt_app/utils/action/log/: coloredLog.cpp  logTx.cpp
qt_app/utils/main/: actionEncoder.cpp  actionInfoLine.cpp  onSPIStopRequested.cpp  rebuildList.cpp  refreshPorts.cpp  sendInstruction.cpp
(+102 files in other folders)
